--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,9 @@ class PrefixNamespaceBindingsTask extends DefaultTask {
 		schemas.each {schema ->
 
 			def schemaLocation = new File("schemas", schema.getAbsolutePath().split("schemas")[1]).toString()
+			
 
-			if (!(schemaLocation in notPartOfThisCompilation)) {
+			if (!("schemas" + schemaLocation.split("schemas")[1] in notPartOfThisCompilation)) {
 
 				def document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(new FileInputStream(schema))
 
